# microdata-datastore-version-manager

./: .gitignore  .test.env  Dockerfile  README.md  azure-pipelines.yml  docker-compose.yml  pyproject.toml
datastore_version_manager/: app.py  application.py  commands.py  datastore.py  message_schema.json  util.py
datastore_version_manager/adapter/: built_datasets.py  constants.py  datastore.py  pending_operations.py
datastore_version_manager/api/: command_api.py  request_models.py
datastore_version_manager/config/: config.py
datastore_version_manager/domain/: data_versions.py  datastore_info.py  datastore_versions.py  draft_dataset.py  metadata_all.py  metadata_patcher.py  pending_operations.py  version_bumper.py
datastore_version_manager/exceptions/: exceptions.py
datastore_version_manager/service/: draft_dataset_service.py  versioning_service.py
datastore_version_manager/util/: date.py  semver.py  util.py
tests/resources/SSB_FDB/datastore/: data_store.json  (+4 more)
tests/resources/patch_metadata/: destination_TEST_DATASET__DRAFT.json  expected_TEST_DATASET__DRAFT.json  source_TEST_DATASET__DRAFT.json
tests/unit/: conftest.py  test_application.py  test_command_bump_version.py  test_commands.py  test_datastore.py
tests/unit/adapter/: test_datastore.py
tests/unit/api/: test_command_api.py
tests/unit/domain/: test_datastore_versions.py  test_draft_dataset.py  test_metadata_all.py  test_metadata_patcher.py  test_pending_operations.py  test_version_bumper.py
tests/unit/service/: test_versioning_service.py  test_versioning_service_bump_version.py
(+24 files in other folders)
