[tool.poetry]
name = "datastore-version-manager"
version = "0.0.1"
description = ""
authors = ["microdata <microdata-dev@ssb.no>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
