[tool.poetry]
name = "datastore-version-manager"
version = "0.0.1"
description = ""
authors = ["microdata <microdata-dev@ssb.no>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
Flask-Pydantic = "^0.9.0"
pydantic = "^1.9.0"
json-logging = "^1.3.0"
tomlkit = "^0.10.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pytest-mock = "^3.7.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
